[package]
name = "graph_pooling_trading"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Team"]
description = "Graph Pooling for Cryptocurrency Trading with Bybit API"
license = "MIT"

[lib]
name = "graph_pooling_trading"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Linear algebra
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
ndarray-stats = "0.5"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# WebSocket for real-time data
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HMAC for API signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[features]
default = []
live-trading = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
